--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "grunt-cli": "~0.1.9",
     "grunt": "~0.4.1",
     "grunt-recess": "~0.3.0",
     "grunt-contrib-clean": "~0.4.1",
