--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Luke Murray",
   "name": "Lift Trends",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "homepage": "",
   "licenses": {
     "type": "MIT",
@@ -14,6 +14,19 @@
   },
   "dependencies": {
     "express": "3.0.6"
+
+    "grunt-cli": "~0.1.9",
+    "grunt": "~0.4.1",
+    "grunt-recess": "~0.3.0",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-jshint": "~0.4.3",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-watch": "~0.4.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-karma": "~0.5.0",
+    "grunt-ngmin": "0.0.2",
+    "grunt-html2js": "~0.1.3"
   },
   "devDependencies": {
     "grunt-cli": "~0.1.9",
