--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "url": "https://github.com/lukemurray/lift-trends"
   },
   "dependencies": {
-    "express": "3.0.6"
+    "express": "3.0.6",
 
     "grunt-cli": "~0.1.9",
     "grunt": "~0.4.1",
