commit bin file that heroku will run

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "lift-trend",
-  "version": "0.1.0",
+  "name": "lift-trends",
+  "version": "0.2.1",
   "devDependencies": {
     
   },
